--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>save-explorer</title>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.1/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
     <div id="app"></div>
